[FIX] Fixed low contrast when reading in mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -469,7 +469,7 @@ h6 {
 
 #hero:before {
 	content: '';
-	background: rgba(255, 255, 255, 0.3);
+	background: rgba(255, 255, 255, 0.1);
 	position: absolute;
 	bottom: 0;
 	top: 0;
@@ -542,7 +542,7 @@ h6 {
 }
 @media (max-width: 768px) {
 	#hero {
-		background-position: -500px;
+		background-position: -830px;
 		height: 100vh;
 	}
 	#hero h1 {
